# ISA

./: CMakeLists.txt  Header.cpp  Header.h  Makefile  Query.cpp  Query.h  Question.cpp  Question.h  README.md  Record.cpp  Record.h  dns-export.1  dokumentace.docx  main.cpp
